--- a/registration.html
+++ b/registration.html
@@ -46,12 +46,12 @@
   </div>
   <div class="form-group">
     <label for="exampleInputEmail1">First Name </label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    <input type="text" class="form-control" id="name" aria-describedby="nameHelp" placeholder="Enter email">
+    <small id="name" class="form-text text-muted">We'll never share your email with anyone else.</small>
   </div>
   <div class="form-group">
     <label for="exampleInputEmail1">Last Name</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+    <input type="text" class="form-control" id="lname" aria-describedby="emailHelp" placeholder=" Enter Last Name">
     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
   </div>
   <div class="form-group">
