--- a/registration.html
+++ b/registration.html
@@ -46,7 +46,7 @@
   </div>
   <div class="form-group">
     <label for="exampleInputEmail1">First Name </label>
-    <input type="text" class="form-control" id="name" aria-describedby="nameHelp" placeholder="Enter email">
+    <input type="text" class="form-control" id="name" aria-describedby="nameHelp" placeholder="Enter First Name">
     <small id="name" class="form-text text-muted">We'll never share your email with anyone else.</small>
   </div>
   <div class="form-group">
